--- a/project/styles.css
+++ b/project/styles.css
@@ -8,7 +8,7 @@
 
 /* Body基本樣式 */
 body {
-    background-color: #c4d8fb; /* 淺灰藍色背景 */
+    background-color: #ffffff; /* 淺灰藍色背景 */
     color: #333; /* 深灰色文字 */
     line-height: 1.6;
     font-size: 16px;
