--- a/project/styles.css
+++ b/project/styles.css
@@ -38,7 +38,7 @@ header p {
 }
 
 /* Carousel 區塊樣式 */
-.carousel {
+/* .carousel {
     margin: 40px auto;
     overflow: hidden;
     border-radius: 10px;
@@ -47,7 +47,7 @@ header p {
 
 .carousel-container {
     display: flex;
-    transition: transform 0.5s cubic-bezier(0.4, 0.0, 0.2, 1); /* 更平滑的动画 */
+    transition: transform 0.5s cubic-bezier(0.4, 0.0, 0.2, 1); 
 }
 
 .carousel-slide img {
@@ -58,8 +58,121 @@ header p {
 }
 
 .carousel-slide img:hover {
-    transform: scale(1.05); /* 图片放大效果 */
-}
+    transform: scale(1.05); 
+} */
+
+/* 定義圖片尺寸 */
+.carousel-wrapper {
+    width: 520px;  /* 400px * 1.3 */
+    height: 350px; /* 250px * 1.4 */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 5px 5px 25px 0px rgba(46, 61, 73, 0.2);
+    border-radius: 20px;
+    margin: 100px auto 20px;
+  }
+  
+  .carousel-container {
+    width: 400px;
+    height: 250px;
+    overflow: hidden;
+    margin: 0 auto;
+  }
+  
+  .carousel {
+    display: flex;
+    width: 1200px; /* 400px * 3 */
+    animation: sliding 12s infinite;
+  }
+  
+  .carousel div {
+    width: 400px;
+    height: 250px;
+    background-size: cover;
+    background-position: center;
+  }
+  
+  .carousel:hover {
+    animation-play-state: paused;
+  }
+  
+  .image-one {
+    background-image: url("./images/street.jpg");
+  }
+  
+  .image-two {
+    background-image: url("./images/handcraft.jpg");
+  }
+  
+  .image-three {
+    background-image: url("./images/keelung.jpg");
+  }
+  
+  @keyframes sliding {
+    30% {
+      transform: translateX(0);
+    }
+    35% {
+      transform: translateX(-400px);
+    }
+    65% {
+      transform: translateX(-400px);
+    }
+    70% {
+      transform: translateX(-800px);
+    }
+    98% {
+      transform: translateX(-800px);
+    }
+    100% {
+      transform: translateX(0);
+    }
+  }
+  
+  @media screen and (max-width: 768px) {
+    .carousel-wrapper {
+      width: 312px;  /* 240px * 1.3 */
+      height: 210px; /* 150px * 1.4 */
+    }
+  
+    .carousel-container {
+      width: 240px;
+      height: 150px;
+    }
+  
+    .carousel {
+      width: 720px; /* 240px * 3 */
+    }
+  
+    .carousel div {
+      width: 240px;
+      height: 150px;
+    }
+  
+    @keyframes sliding {
+      30% {
+        transform: translateX(0);
+      }
+      35% {
+        transform: translateX(-240px);
+      }
+      65% {
+        transform: translateX(-240px);
+      }
+      70% {
+        transform: translateX(-480px);
+      }
+      98% {
+        transform: translateX(-480px);
+      }
+      100% {
+        transform: translateX(0);
+      }
+    }
+  }
+  
+
 
 /* 團隊介紹區塊 */
 .team-introduction {
@@ -212,7 +325,7 @@ header p {
 /* 特定样式：二维码图片 */
 .qrcode-img {
     width: 100%; /* 让图片在小屏幕上自适应 */
-    max-width: 180px; /* 限制二维码的最大尺寸 */
+    max-width: 60px; /* 限制二维码的最大尺寸 */
     height: auto;
     object-fit: contain;
     border-radius: 8px;
